@@ -36,6 +36,8 @@ AC_CONFIG_MACRO_DIR([m4])
 
 LT_INIT()
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
